--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -15,7 +15,7 @@
         text-align: center;
         position: initial;
         justify-content: space-between;
-        background-color: rgba(0, 0, 0, 0.905);
+        background-color: white;
     }
 
     nav ul li a {
